# backtesting-stockmarket

./: .env.example  .gitignore  AGENTS.md  FRONTEND_CODEBASE_SUMMARY.md  PROJECT_GUIDE.md  README.md  REPLAY_IMPLEMENTATION_PLAN.md  TESTING.md  handover.md  pyproject.toml
backend/: README.md
frontend/: AGENTS.md  README.md  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/lib/: api.ts  backtest-api.ts  market-data.ts  mock-data.ts  robustness-api.ts  strategy-library.ts  utils.ts
src/quant_research/: pattern_finder.py
src/quant_research/api/: __init__.py  config.py  container.py  main.py  schemas.py
src/quant_research/data_providers/: __init__.py  base.py  cached.py  local_cache.py  yahoo_finance.py
src/quant_research/llm/: __init__.py  ollama.py
src/quant_research/repositories/: __init__.py  artifacts.py  backtests.py  market_cache.py
src/quant_research/services/: __init__.py  hypotheses.py  ml_research.py  nifty500_catalogue.py  nse_import.py  pattern_strategy.py  replay.py  research.py  sma_backtest.py  youtube_strategy.py
tests/: test_persistence.py  test_vector_engine.py
tests/unit/: test_compiler.py  test_data_inventory_api.py  test_dsl.py  test_hashing.py  test_hypotheses.py  test_local_cache_provider.py  test_market_cache.py  test_metrics.py  test_ml_research.py  test_nifty500_catalogue.py  test_nse_import.py  test_ollama.py  test_replay.py  test_research_service.py  test_sma_backtest.py  test_validator.py  test_yahoo_finance.py  test_youtube_strategy.py
(+48 files in other folders)
